# varsdaa

./: .gitignore  .mise.toml  LICENSE  README.md  pyproject.toml
example/: manage.py
example/example/: settings.py  urls.py
varsdaa/: adapters.py  admin.py  apps.py  autosubmit_form.py  iommi.py  map.py  models.py  register.py  style.py  tests.py  urls.py  views.py
varsdaa/migrations/: 0001_initial.py  0002_alter_user_managers_alter_registration_desk.py  0003_user_office_user_office_updated_at_display_and_more.py  0004_display_product_name_alter_display_user_updated_at.py
varsdaa/templates/js/: map.js
varsdaa/test/: settings.py
